# Thwonk

./: README
backend/: AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.in  README  TODO  configure  configure.in  reconf
backend/src/: Makefile.am  Makefile.in  codewide.c  codewide.h  config.h.in  dbchatter.c  dbchatter.h  jsrunner.c  jsrunner.h  jsthwonk.c  jsthwonk.h  jsthwonkobjects.h  launch.sh  logerror.c  logerror.h  mailinject.c  mailinject.h  message.c  message.h  misc.c  misc.h  mnglogic.c  mnglogic.h  mngmail.c  mngmail.h  mngvfile.c  mngvfile.h  msgdelivery.c  msgdelivery.h  msgqueue.c  msgqueue.h  parsemail.c  parsemail.h  rulerunner.c  rulerunner.h  sandbox.c  sandbox.h  setupthang.c  setupthang.h  user.c  (+3 more)
backend/src/database/: drop_thwonk.sql  thwonk.sql
backend/src/javascript/: ParseMail.js  bumplist.js  bumplist.js.1  factorial-10.js  factorial-1000-lots.js  factorial-5.js  test.js  test2.js  while-forever.js
frontend/: TODO
