dnl Build script for Thwonk
AC_INIT([thwonk], [1.0], [Mike Bennett (mike@thwonk.com)], [thwonk])
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

dnl AC_CANONICAL_HOST
AM_MAINTAINER_MODE

dnl AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

dnl Make sure required headers are available
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(stdio.h stdarg.h errno.h unistd.h sys/resource.h js/jsapi.h)

AC_TYPE_SIGNAL
AC_TYPE_SIZE_T
AC_CHECK_FUNC(signal)

dnl Check for Mysql dev env
AC_CHECK_PROG(MYSQL, mysql_config , "yes", "no")

if test "$MYSQL" != "yes"; then
	AC_MSG_ERROR([
		Cannot find mysql_config - please install the development version of MySQL
])
fi

AC_SUBST(MYSQL_LIBS, `mysql_config --libs`)
AC_SUBST(MYSQL_CFLAGS, `mysql_config --cflags`)

dnl Check for spidermonkey library and headers

AC_CHECK_PROG(SPIDERMONKEY, js-config , "yes", "no")

if test "$SPIDERMONKEY" != "yes"; then
	AC_MSG_ERROR([
		Cannot find js-config (Spidermonkey Javascript engine) - please install the development version of Spidermonkey
])
fi

AC_SUBST(SPIDERMONKEY_LIBS, `js-config --libs`)
AC_SUBST(SPIDERMONKEY_CFLAGS, `js-config --cflags`)

dnl AC_SUBST(SPIDERMONKEY_CFLAGS, "-DXP_UNIX")

dnl Check for mailutils config, library and headers
AC_CHECK_PROG(MAILUTILS, mailutils-config, "yes", "no")

if test "$MAILUTILS" != "yes"; then
	AC_MSG_ERROR([
		Cannot find mailutils-config - please install the development version of mailutils
])
fi

AC_SUBST(MAILUTILS_LIBS, `mailutils-config --link`)
AC_SUBST(MAILUTILS_CFLAGS, `mailutils-config --compile`)


AC_OUTPUT(Makefile src/Makefile)
